Fix articlebox images on tablets

--- a/src/css/blocks/article.less
+++ b/src/css/blocks/article.less
@@ -37,7 +37,7 @@
             display: block;
         }
 
-        @media @tablet, @desktop {
+        @media @desktop {
             flex-wrap: nowrap;
         }
 
